Fix the WASM build on Linux https://bugs.webkit.org/show_bug.cgi?id=149919

Reviewed by Mark Lam.

* inspector/ScriptCallStackFactory.cpp:
* wasm/JSWASMModule.cpp:
* wasm/WASMFunctionCompiler.h:
(JSC::sizeOfMemoryType):
* wasm/WASMFunctionLLVMIRGenerator.h:


Canonical link: https://commits.webkit.org/168060@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190722 268f45cc-cd09-0410-ab3c-d52691b4dbfc